Opened 14 years ago
Closed 14 years ago
#7384 closed bug (fixed)
Mail preferences has lost Incoming-only, Outgoing-only
Reported by: | jonas.kirilla | Owned by: | czeidler |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Mail | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Mail preferences no longer supports having accounts as incoming-only or outgoing-only.
In hrev41022.
Attachments (3)
Change History (8)
follow-up: 2 comment:1 by , 14 years ago
follow-up: 3 comment:2 by , 14 years ago
Replying to czeidler:
Is it really a problem?
Yes. To send with different sender/return addresses Mail needs separate accounts. (And I need to be able to send by these other addresses for some mailing lists to which I subscribe.)
Since my web hotel does not provide me with real POP3 accounts for my alternatitve domains, I have a single POP3 account and a set of alises on which I can receive to the same POP3 account. So I have a single Incoming/Outgoing account set up in Mail and [used to have] multiple Outgoing ones. Glorified "return address", sort of.
If you don't have a outgoing chain just remove the server name and the outgoing protocol should not be loaded (modulo bugs ;)).
It was the other way around. Not having Incoming. Since I can't make the second account -not- have an incoming part it fails each time on trying to connect and receive mail, since the server name is empty. (I guess I could add the same POP3 in the second account, unless they're checked in parallel.)
Is there really a realistic/common usecase for a single chain? Otherwise it would just blow up the user interface because you need a way to add single chains again, this was missing before too...
No it was not. There was an option to set the account either Incoming, Outgoing or Both Incoming and Outgoing.
Having disjoint setups isn't unthinkable at all. Even in the normal case with a single In/Out account, the POP3 and the SMTP are often not provided by the same entity. E.g. SMTP via your broadband ISP, POP3 or IMAP via Google.
follow-up: 4 comment:3 by , 14 years ago
Replying to jonas.kirilla:
It was the other way around. Not having Incoming. Since I can't make the second account -not- have an incoming part it fails each time on trying to connect and receive mail, since the server name is empty. (I guess I could add the same POP3 in the second account, unless they're checked in parallel.)
ok that's a bug will fix it...
Is there really a realistic/common usecase for a single chain? Otherwise it would just blow up the user interface because you need a way to add single chains again, this was missing before too...
No it was not. There was an option to set the account either Incoming, Outgoing or Both Incoming and Outgoing.
What was not possible in the past was to add another chain to an existing account, right?
Having disjoint setups isn't unthinkable at all. Even in the normal case with a single In/Out account, the POP3 and the SMTP are often not provided by the same entity. E.g. SMTP via your broadband ISP, POP3 or IMAP via Google.
I still think its not a very common case. The default user would just have a simple google, yahoo,... account. What do you think about just keeping everything as it is but add a right click menu to the account list to enable/disable the incoming or outgoing chains? A disabled chain would simply not be shown in the list but could be enabled again in the right click menu.
by , 14 years ago
Attachment: | img_1716_01.png added |
---|
by , 14 years ago
Attachment: | AccountType.png added |
---|
by , 14 years ago
Attachment: | OutboundOnly.png added |
---|
comment:4 by , 14 years ago
Replying to czeidler:
What was not possible in the past was to add another chain to an existing account, right?
I'm not sure I follow. I assume a normal In/Out account is made up by two chains. Correct? It was possible to switch an account between Inbound, Outbound, Inbound&Outbound, back and forth, IIRC.
What do you think about just keeping everything as it is but add a right click menu to the account list to enable/disable the incoming or outgoing chains?
I think the old options interface, as shown in the screenshots, is preferrable if still possible.
A disabled chain would simply not be shown in the list but could be enabled again in the right click menu.
I'm not a 100% sure here, but I think that's how it used to work. IIRC you could flip an account between the various modes, saving in between, without losing settings. So I guess it merely disabled chains, rather than removed than.
comment:5 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Think its fixed in hrev41078. Feel free to improve the gui but I think its ok (?)
Is it really a problem? If you don't have a outgoing chain just remove the server name and the outgoing protocol should not be loaded (modulo bugs ;)). Is there really a realistic/common usecase for a single chain? Otherwise it would just blow up the user interface because you need a way to add single chains again, this was missing before too...