Incoming and outgoing protocols can be disabled/enabled using a right click menu in the account list view. Fixes #7384.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41078 a95241bf-73f2-0310-859d-f6bbb57e9c96